[REV] copy from code.goodrain.com

--- a/src/main/resources/static/apiInstance.html
+++ b/src/main/resources/static/apiInstance.html
@@ -6340,7 +6340,7 @@
 
   </style>
   <link
-          href="https://cdn.bootcss.com/jquery-jsonview/1.2.3/jquery.jsonview.css"
+          href="static/css/jquery.jsonview.css"
           rel="stylesheet"
   />
 </head>
@@ -6405,7 +6405,7 @@
           <option value="delete">delete</option>
           <option value="put">put</option>
         </select>
-        <input type="text" style="border-radius: 0" id="api_url">
+        <input type="text" style="border-radius: 0" id="api_url" value="http://127.0.0.1:5000/foobar/list-env">
       </div>
       <div class="col col-2" style="width:20%">
         <button class="button small" style="float:right" onclick="handleClick()">Send</button>
