[REV] change favicon and some links

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -60,14 +60,14 @@
         <nav id="top-nav-main">
           <ul>
             <li>
-              <a href="https://github.com/goodrain/rainbond" target="_blank"
+              <a href="https://github.com/goodrain/java-maven-demo" target="_blank"
                 >Github</a
               >
             </li>
 
             <li>
               <a
-                href="https://www.rainbond.com/docs/stable/user-manual/app-creation/language-support/java.html"
+                href="https://www.rainbond.com/docs/user-manual/app-creation/language-support/java_more/java-maven/"
                 target="_blank"
                 >Docs</a
               >
